2005-06-05  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/api/epydoc (dependencies): put fake modules in sys.modules
	so that dbapi drivers don't need to be present to build the api
	docs. 

	* src/pydo/base.py (_metapydo.__init__): allow cls.guesscache to
	be declared as a string, which is turned into the cachedir
	parameter of a default GuessCache.

	* doc/api/Makefile (EPYDOC): call new wrapper script.

	* doc/api/epydoc: wrapper script for epydoc with somewhat
	unfortunate hack (__all__ in __init__.py confuses epydoc, so I
	delete it first).

2005-06-04  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/oracleconn.py, src/pydo/dbi.py (_driverConfig):
	adding oracle driver (contributed by Hamish Lawson).

	* src/testingtesting.py: an extremely barebones testing framework.
	(annotate): adding decorator for tagging tests.
	(_testsForNamespace): rough draft of filtering by tag.

2005-06-01  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/mssqlconn.py (MssqlDBI.listTables),
	src/pydo/drivers/sqliteconn.py (SqliteDBI.listTables): for
	consistency, return list sorted as the other drivers do.

	* doc/manual.rst: documenting guesscache.

	* src/pydo/__init__.py: import from guesscache.py.

	* src/pydo/guesscache.py: adding a cache for storing table
	introspection data.

	* src/pydo/base.py (PyDO): added guesscache attribute, and 
	processing with it in _getTableDescription.

	* doc/manual.rst: document change to signature of project().

	* src/pydo/__init__.py: use getall to make the package's __all__
	nicer. 

	* src/pydo/utils.py (getall): function for coalescing __all__ of
	submodules into the package namespace's __all__.

2005-05-31  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO.project): change to signature: take
	fields as positional parameters rather than a tuple (saves typing
	and is easier for tuples of length one).

	* src/pydo/multifetch.py (iterfetch): correction to docstring.
